@@ -10,6 +10,7 @@ import com.healthcare.appointmentservice.dto.AppointmentResponse;
 import com.healthcare.appointmentservice.dto.AppointmentUpdateRequest;
 import com.healthcare.appointmentservice.dto.NotificationRequest;
 import com.healthcare.appointmentservice.dto.StatusUpdateRequest;
+import com.healthcare.appointmentservice.dto.SlotStatusResponse;
 import com.healthcare.appointmentservice.entity.Appointment;
 import com.healthcare.appointmentservice.entity.AppointmentStatus;
 import com.healthcare.appointmentservice.exception.BadRequestException;
@@ -22,6 +23,7 @@ import com.healthcare.appointmentservice.dto.PaymentStatusUpdateRequest;
 import java.math.BigDecimal;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
@@ -29,6 +31,7 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,11 +48,15 @@ public class AppointmentServiceImpl implements AppointmentService {
     private final AppointmentSecurityProperties appointmentSecurityProperties;
     private final DoctorScheduleSlotClient doctorScheduleSlotClient;
     private final AuthProviderDirectoryClient authProviderDirectoryClient;
+    private final JdbcTemplate jdbcTemplate;
     @Value("${app.frontend-base-url:http://localhost:5173}")
     private String frontendBaseUrl;
 
     @Value("${app.payment-link:${app.frontend-base-url:http://localhost:5173}/patient-dashboard}")
     private String paymentLink;
+
+    @Value("${app.auth-schedule-db-name:ayubo_auth_db}")
+    private String authScheduleDbName;
 
     @Override
     public AppointmentResponse createAppointment(AppointmentCreateRequest request) {
@@ -58,13 +65,27 @@ public class AppointmentServiceImpl implements AppointmentService {
 
         validateTimeRange(request.getStartTime(), request.getEndTime());
 
-        appointmentRepository.findByDoctorIdAndAppointmentDateAndStartTime(
+        int maxPatientsForSlot = resolveMaxPatientsForSlot(
                 request.getDoctorId(),
                 request.getAppointmentDate(),
                 request.getStartTime()
-        ).ifPresent(existing -> {
-            throw new BadRequestException("This slot is already booked for the selected doctor");
-        });
+        );
+
+        long activeBookings = appointmentRepository.countByDoctorIdAndAppointmentDateAndStartTimeAndStatusIn(
+                request.getDoctorId(),
+                request.getAppointmentDate(),
+                request.getStartTime(),
+                List.of(
+                        AppointmentStatus.PENDING_PAYMENT,
+                        AppointmentStatus.CONFIRMED,
+                        AppointmentStatus.COMPLETED,
+                        AppointmentStatus.RESCHEDULED
+                )
+        );
+
+        if (activeBookings >= maxPatientsForSlot) {
+            throw new BadRequestException("This slot is sold out for the selected doctor");
+        }
 
         Appointment appointment = Appointment.builder()
                 .appointmentNumber(generateAppointmentNumber())
@@ -85,13 +106,10 @@ public class AppointmentServiceImpl implements AppointmentService {
                 .endTime(request.getEndTime())
                 .reason(request.getReason())
                 .noteOrAddress(request.getNoteOrAddress())
-                .noShowRefund(Boolean.TRUE.equals(request.getNoShowRefund()))
                 .onGoingNumber(Boolean.TRUE.equals(request.getOnGoingNumber()))
+                .slotId(resolveSlotId(request.getDoctorId(), request.getAppointmentDate(), request.getStartTime(), request.getSlotId()))
                 .status(AppointmentStatus.PENDING_PAYMENT)
                 .paymentStatus("PENDING")
-                .notes("Appointment created successfully")
-                .cancelReason(null)
-                .rescheduleCount(0)
                 .build();
 
         Appointment saved = appointmentRepository.save(appointment);
@@ -115,7 +133,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         return appointmentRepository.findByPatientEmailIgnoreCase(email)
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -128,7 +146,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         return appointmentRepository.findByDoctorId(doctorId)
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -152,15 +170,24 @@ public class AppointmentServiceImpl implements AppointmentService {
                 || !newStartTime.equals(appointment.getStartTime())
                 || !newEndTime.equals(appointment.getEndTime());
 
-        appointmentRepository.findByDoctorIdAndAppointmentDateAndStartTime(
-                appointment.getDoctorId(),
-                newDate,
-                newStartTime
-        ).ifPresent(existing -> {
-            if (!existing.getId().equals(appointment.getId())) {
-                throw new BadRequestException("Requested new slot is already booked");
+        if (scheduleChanged) {
+            int maxPatientsForSlot = resolveMaxPatientsForSlot(appointment.getDoctorId(), newDate, newStartTime);
+            long activeBookings = appointmentRepository.countByDoctorIdAndAppointmentDateAndStartTimeAndStatusInAndIdNot(
+                    appointment.getDoctorId(),
+                    newDate,
+                    newStartTime,
+                    List.of(
+                            AppointmentStatus.PENDING_PAYMENT,
+                            AppointmentStatus.CONFIRMED,
+                            AppointmentStatus.COMPLETED,
+                            AppointmentStatus.RESCHEDULED
+                    ),
+                    appointment.getId()
+            );
+            if (activeBookings >= maxPatientsForSlot) {
+                throw new BadRequestException("Requested new slot is sold out");
             }
-        });
+        }
 
         appointment.setAppointmentDate(newDate);
         appointment.setStartTime(newStartTime);
@@ -206,9 +233,6 @@ public class AppointmentServiceImpl implements AppointmentService {
             appointment.setNoteOrAddress(request.getNoteOrAddress());
         }
 
-        if (request.getNoShowRefund() != null) {
-            appointment.setNoShowRefund(request.getNoShowRefund());
-        }
 
         if (request.getOnGoingNumber() != null) {
             appointment.setOnGoingNumber(request.getOnGoingNumber());
@@ -216,10 +240,6 @@ public class AppointmentServiceImpl implements AppointmentService {
 
         if (scheduleChanged) {
             appointment.setStatus(AppointmentStatus.RESCHEDULED);
-            appointment.setRescheduleCount(appointment.getRescheduleCount() + 1);
-            appointment.setNotes("Appointment rescheduled");
-        } else {
-            appointment.setNotes("Appointment details updated");
         }
 
         Appointment updated = appointmentRepository.save(appointment);
@@ -260,8 +280,29 @@ public class AppointmentServiceImpl implements AppointmentService {
 
         validateStatusTransition(appointment.getStatus(), newStatus);
 
+        if (newStatus == AppointmentStatus.CONFIRMED && appointment.getStatus() != AppointmentStatus.CONFIRMED) {
+            int maxPatientsForSlot = resolveMaxPatientsForSlot(
+                    appointment.getDoctorId(),
+                    appointment.getAppointmentDate(),
+                    appointment.getStartTime()
+            );
+            long alreadyConfirmed = appointmentRepository.countByDoctorIdAndAppointmentDateAndStartTimeAndStatusIn(
+                    appointment.getDoctorId(),
+                    appointment.getAppointmentDate(),
+                    appointment.getStartTime(),
+                    List.of(
+                            AppointmentStatus.CONFIRMED,
+                            AppointmentStatus.COMPLETED,
+                            AppointmentStatus.RESCHEDULED
+                    )
+            );
+            if (alreadyConfirmed >= maxPatientsForSlot) {
+                throw new BadRequestException("Cannot confirm: slot is already sold out");
+            }
+        }
+
         appointment.setStatus(newStatus);
-        appointment.setNotes(request.getNotes());
+
 
         Appointment updated = appointmentRepository.save(appointment);
 
@@ -285,7 +326,7 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     @Override
-    public void cancelAppointment(Long id, String cancelReason) {
+    public void cancelAppointment(Long id) {
         Appointment appointment = findAppointmentById(id);
         assertCanModifyAppointmentAsPatientOrProvider(appointment);
 
@@ -294,8 +335,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         }
 
         appointment.setStatus(AppointmentStatus.CANCELLED);
-        appointment.setCancelReason(cancelReason != null ? cancelReason : "Cancelled by user");
-        appointment.setNotes("Appointment cancelled");
+
 
         appointmentRepository.save(appointment);
 
@@ -307,12 +347,12 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     @Override
-    public List<String> getAvailableSlots(Long doctorId, String date, boolean forCurrentMonth) {
+    public List<SlotStatusResponse> getAvailableSlots(Long doctorId, String date, boolean forCurrentMonth) {
         LocalDate anchor = parseSlotDate(date);
         if (!forCurrentMonth) {
             List<Appointment> bookedAppointments =
                     appointmentRepository.findByDoctorIdAndAppointmentDate(doctorId, anchor);
-            return buildAvailableSlotTimesForDay(doctorId, anchor, bookedAppointments);
+            return buildAvailableSlotResponsesForDay(doctorId, anchor, bookedAppointments);
         }
 
         LocalDate monthStart = anchor.withDayOfMonth(1);
@@ -323,72 +363,72 @@ public class AppointmentServiceImpl implements AppointmentService {
                 monthEnd
         );
 
-        Map<LocalDate, Map<String, Long>> bookedByDay = monthBookings.stream()
-                .filter(a -> a.getStatus() != AppointmentStatus.CANCELLED
-                        && a.getStatus() != AppointmentStatus.REJECTED)
-                .collect(Collectors.groupingBy(
-                        Appointment::getAppointmentDate,
-                        Collectors.groupingBy(
-                                a -> a.getStartTime().toString().substring(0, 5),
-                                Collectors.counting()
-                        )
-                ));
+        Map<LocalDate, List<Appointment>> bookingsByDay = monthBookings.stream()
+                .collect(Collectors.groupingBy(Appointment::getAppointmentDate));
 
-        List<String> combined = new ArrayList<>();
+        List<SlotStatusResponse> combined = new ArrayList<>();
         for (LocalDate d = monthStart; !d.isAfter(monthEnd); d = d.plusDays(1)) {
-            Map<String, Long> bookedForDay = bookedByDay.getOrDefault(d, Map.of());
-            for (String time : buildAvailableSlotTimesForDay(doctorId, d, bookedForDay)) {
-                combined.add(d + " " + time);
+            List<Appointment> bookedForDay = bookingsByDay.getOrDefault(d, Collections.emptyList());
+            for (SlotStatusResponse res : buildAvailableSlotResponsesForDay(doctorId, d, bookedForDay)) {
+                // Prefix status if needed or just add it
+                SlotStatusResponse prefixed = SlotStatusResponse.builder()
+                        .startTime(d + " " + res.getStartTime())
+                        .maxPatients(res.getMaxPatients())
+                        .availableSlots(res.getAvailableSlots())
+                        .status(res.getStatus())
+                        .build();
+                combined.add(prefixed);
             }
         }
-        combined.sort(String::compareTo);
         return combined;
     }
 
     /**
-     * Returns start times (HH:mm) still open for booking on {@code day}, using auth schedule capacity
-     * minus non-cancelled appointments for that day.
+     * Returns list of slot responses for {@code day}, using auth schedule capacity
+     * minus confirmed appointments for that day.
      */
-    private List<String> buildAvailableSlotTimesForDay(
+    private List<SlotStatusResponse> buildAvailableSlotResponsesForDay(
             long doctorId,
             LocalDate day,
             List<Appointment> bookedAppointmentsForDay
     ) {
-        Map<String, Long> bookedCountBySlot = bookedAppointmentsForDay.stream()
-                .filter(a -> a.getStatus() != AppointmentStatus.CANCELLED
-                        && a.getStatus() != AppointmentStatus.REJECTED)
+        // PER REQUIREMENT: Deduce available slots ONLY after doctor approval
+        // Approved/Confirmed statuses: CONFIRMED, COMPLETED, RESCHEDULED
+        Map<String, Long> confirmedCountBySlot = bookedAppointmentsForDay.stream()
+                .filter(a -> a.getStatus() == AppointmentStatus.CONFIRMED
+                        || a.getStatus() == AppointmentStatus.COMPLETED
+                        || a.getStatus() == AppointmentStatus.RESCHEDULED)
                 .collect(Collectors.groupingBy(
                         a -> a.getStartTime().toString().substring(0, 5),
                         Collectors.counting()
                 ));
-        return buildAvailableSlotTimesForDay(doctorId, day, bookedCountBySlot);
-    }
-
-    private List<String> buildAvailableSlotTimesForDay(
-            long doctorId,
-            LocalDate day,
-            Map<String, Long> bookedCountBySlot
-    ) {
+        
         List<AuthScheduleSlotRow> scheduledRows = doctorScheduleSlotClient.fetchScheduledSlots(doctorId, day.toString());
-        Map<String, Integer> capacityByStart = new LinkedHashMap<>();
+        List<SlotStatusResponse> responses = new ArrayList<>();
+        
         for (AuthScheduleSlotRow row : scheduledRows) {
-            if (row.startTime() == null || row.startTime().isBlank()) {
+            if (row.startTime() == null || row.startTime().trim().isEmpty()) {
                 continue;
             }
             String slotKey = normalizeSlotTimeKey(row.startTime());
-            int cap = row.maxPatients() != null && row.maxPatients() > 0 ? row.maxPatients() : 1;
-            capacityByStart.merge(slotKey, cap, Integer::max);
+            int maxCap = row.maxPatients() != null && row.maxPatients() > 0 ? row.maxPatients() : 1;
+            long confirmedCount = confirmedCountBySlot.getOrDefault(slotKey, 0L);
+            long available = maxCap - confirmedCount;
+            if (available < 0) available = 0;
+
+            String status = available > 0 ? "AVAILABLE" : "SOLD OUT";
+
+            responses.add(SlotStatusResponse.builder()
+                    .startTime(slotKey)
+                    .maxPatients(maxCap)
+                    .availableSlots(available)
+                    .status(status)
+                    .build()
+            );
         }
 
-        if (capacityByStart.isEmpty()) {
-            return List.of();
-        }
-
-        return capacityByStart.entrySet().stream()
-                .filter(e -> bookedCountBySlot.getOrDefault(e.getKey(), 0L) < e.getValue())
-                .map(Map.Entry::getKey)
-                .sorted()
-                .toList();
+        responses.sort((a, b) -> a.getStartTime().compareTo(b.getStartTime()));
+        return responses;
     }
 
     private static String normalizeSlotTimeKey(String raw) {
@@ -396,8 +436,47 @@ public class AppointmentServiceImpl implements AppointmentService {
         return s.length() >= 5 ? s.substring(0, 5) : s;
     }
 
+    private int resolveMaxPatientsForSlot(long doctorId, LocalDate day, LocalTime startTime) {
+        String slotKey = normalizeSlotTimeKey(startTime.toString());
+        List<AuthScheduleSlotRow> scheduledRows = doctorScheduleSlotClient.fetchScheduledSlots(doctorId, day.toString());
+        for (AuthScheduleSlotRow row : scheduledRows) {
+            if (row.startTime() == null || row.startTime().trim().isEmpty()) {
+                continue;
+            }
+            String candidate = normalizeSlotTimeKey(row.startTime());
+            if (slotKey.equals(candidate)) {
+                Integer maxPatients = row.maxPatients();
+                return maxPatients != null && maxPatients > 0 ? maxPatients : 1;
+            }
+        }
+        throw new BadRequestException("Selected slot is not available for the chosen date");
+    }
+
+    private Long resolveSlotId(Long doctorId, LocalDate day, LocalTime startTime, Long requestedSlotId) {
+        if (requestedSlotId != null) {
+            return requestedSlotId;
+        }
+        String tableName = authScheduleDbName + ".doctor_schedule_slots";
+        String sql = "SELECT id FROM " + tableName + " " +
+                "WHERE provider_id = ? " +
+                "AND (slot_date = ? OR date = ?) " +
+                "AND (start_time = ? OR start_time = CONCAT(?, ':00')) " +
+                "ORDER BY id DESC LIMIT 1";
+        String normalizedTime = normalizeSlotTimeKey(startTime.toString());
+        List<Long> ids = jdbcTemplate.query(
+                sql,
+                (rs, rowNum) -> rs.getLong("id"),
+                doctorId,
+                day,
+                day.toString(),
+                normalizedTime,
+                normalizedTime
+        );
+        return ids.isEmpty() ? null : ids.get(0);
+    }
+
     private LocalDate parseSlotDate(String raw) {
-        if (raw == null || raw.isBlank()) {
+        if (raw == null || raw.trim().isEmpty()) {
             throw new BadRequestException("date is required");
         }
         String trimmed = raw.trim();
@@ -501,14 +580,10 @@ public class AppointmentServiceImpl implements AppointmentService {
                 .endTime(appointment.getEndTime())
                 .reason(appointment.getReason())
                 .noteOrAddress(appointment.getNoteOrAddress())
-                .noShowRefund(appointment.getNoShowRefund())
                 .onGoingNumber(appointment.getOnGoingNumber())
+                .slotId(appointment.getSlotId())
                 .status(appointment.getStatus().name())
                 .paymentStatus(appointment.getPaymentStatus())
-                .totalPrice(appointment.getTotalPrice())
-                .notes(appointment.getNotes())
-                .cancelReason(appointment.getCancelReason())
-                .rescheduleCount(appointment.getRescheduleCount())
                 .createdAt(appointment.getCreatedAt())
                 .updatedAt(appointment.getUpdatedAt())
                 .build();
@@ -560,7 +635,7 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     private String patientName(Appointment appointment) {
-        if (appointment.getPatientName() != null && !appointment.getPatientName().isBlank()) {
+        if (appointment.getPatientName() != null && !appointment.getPatientName().trim().isEmpty()) {
             return appointment.getPatientName().trim();
         }
         return "Patient";
@@ -577,7 +652,7 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     private String normalizeContactEmail(String requestedEmail, String fallbackEmail) {
-        if (requestedEmail == null || requestedEmail.isBlank()) {
+        if (requestedEmail == null || requestedEmail.trim().isEmpty()) {
             return fallbackEmail;
         }
         return requestedEmail.trim();
@@ -587,14 +662,14 @@ public class AppointmentServiceImpl implements AppointmentService {
         if (SecurityUtils.hasRole("PATIENT")) {
             return SecurityUtils.requireCurrentUserEmail();
         }
-        if (request.getEmail() != null && !request.getEmail().isBlank()) {
+        if (request.getEmail() != null && !request.getEmail().trim().isEmpty()) {
             return request.getEmail().trim();
         }
         return "guest-" + UUID.randomUUID().toString().substring(0, 8) + "@ayubo.local";
     }
 
     private String notificationRecipient(Appointment appointment) {
-        if (appointment.getContactEmail() != null && !appointment.getContactEmail().isBlank()) {
+        if (appointment.getContactEmail() != null && !appointment.getContactEmail().trim().isEmpty()) {
             return appointment.getContactEmail();
         }
         return appointment.getPatientEmail();
@@ -607,7 +682,7 @@ public class AppointmentServiceImpl implements AppointmentService {
      * - +94XXXXXXXXX -> +94XXXXXXXXX
      */
     private String normalizeSriLankanPhone(String rawPhone) {
-        if (rawPhone == null || rawPhone.isBlank()) {
+        if (rawPhone == null || rawPhone.trim().isEmpty()) {
             return null;
         }
 
